testdata/baselines/reference/submodule/compiler/importNonExportedMember12.errors.txt
/b.ts(1,10): error TS2459: Module '"/a"' declares 'A' locally, but it is not exported.
/node_modules/foo/src/index.js(1,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== /node_modules/foo/package.json (0 errors) ====
    { "name": "foo", "version": "1.2.3", "main": "src/index.js" }
    
==== /node_modules/foo/src/index.js (1 errors) ====
    module.exports = 1;
    ~~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    
==== /a.js (0 errors) ====
    export const A = require("foo");
    
==== /b.ts (1 errors) ====
    import { A } from "./a";
             ~
!!! error TS2459: Module '"/a"' declares 'A' locally, but it is not exported.
!!! related TS2728 /a.js:1:14: 'A' is declared here.
    